--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,32 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+                
+                <!--webjars-->
+                <dependency>
+                    <groupId>org.webjars</groupId>
+                    <artifactId>bootstrap</artifactId>
+                    <version>4.5.2</version>
+                </dependency>
+                
+                <dependency>
+                    <groupId>org.webjars.bower</groupId>
+                    <artifactId>font-awesome</artifactId>
+                    <version>4.5.0</version>
+                </dependency>
+                
+                <dependency>
+                    <groupId>org.webjars.bower</groupId>
+                    <artifactId>pushy</artifactId>
+                    <version>1.1.0</version>
+                </dependency>
+                
+                <dependency>
+                    <groupId>org.webjars.bower</groupId>
+                    <artifactId>tether</artifactId>
+                    <version>1.4.0</version>
+                </dependency>
+                
 	</dependencies>
 
 	<build>
