--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,11 @@
                     <version>1.4.0</version>
                 </dependency>
                 
+                <dependency>
+                    <groupId>org.webjars.bower</groupId>
+                    <artifactId>simple-line-icons</artifactId>
+                    <version>2.4.1</version>
+                </dependency>
 	</dependencies>
 
 	<build>
