--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,12 @@
                     <artifactId>simple-line-icons</artifactId>
                     <version>2.4.1</version>
                 </dependency>
+                
+                <dependency>
+                    <groupId>org.webjars.bower</groupId>
+                    <artifactId>croppie</artifactId>
+                    <version>2.6.3</version>
+                </dependency>
 	</dependencies>
 
 	<build>
