--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:h2:mem:testdb
 logging.level.guru.springframework=debug
+
+upload.path=C:/Users/nicol/Desktop/Lessons/Java/dpo/uploads
