--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,11 @@
                     <optional>true</optional>
                 </dependency>
                 
+                <dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+                
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -69,6 +74,11 @@
 			</exclusions>
 		</dependency>
                 
+<!--                <dependency>
+                    <groupId>org.hibernate</groupId>
+                    <artifactId>hibernate-jpamodelgen</artifactId>
+                </dependency>-->
+                
                 <!--webjars-->
                 <dependency>
                     <groupId>org.webjars</groupId>
@@ -80,6 +90,12 @@
                     <groupId>org.webjars.bower</groupId>
                     <artifactId>font-awesome</artifactId>
                     <version>4.5.0</version>
+                </dependency>
+                
+                <dependency>
+                    <groupId>org.webjars</groupId>
+                    <artifactId>fancybox</artifactId>
+                    <version>3.2.5</version>
                 </dependency>
                 
                 <dependency>
@@ -105,6 +121,12 @@
                     <artifactId>croppie</artifactId>
                     <version>2.6.3</version>
                 </dependency>
+                
+                <dependency>
+                    <groupId>org.webjars</groupId>
+                    <artifactId>jquery-ui</artifactId>
+                    <version>1.12.1</version>
+                </dependency>
 	</dependencies>
 
 	<build>
@@ -113,6 +135,32 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+                        <plugin>
+                            <groupId>org.bsc.maven</groupId>
+                            <artifactId>maven-processor-plugin</artifactId>
+                            <version>2.2.4</version>
+                            <executions>
+                                <execution>
+                                    <id>process</id>
+                                    <goals>
+                                        <goal>process</goal>
+                                    </goals>
+                                    <phase>generate-sources</phase>
+                                    <configuration>
+                                        <processors>
+                                            <processor>org.hibernate.jpamodelgen.JPAMetaModelEntityProcessor</processor>
+                                        </processors>
+                                    </configuration>
+                                </execution>
+                            </executions>
+                            <dependencies>
+                                <dependency>
+                                    <groupId>org.hibernate</groupId>
+                                    <artifactId>hibernate-jpamodelgen</artifactId>
+                                    <version>4.3.8.Final</version>
+                                </dependency>
+                            </dependencies>
+                        </plugin>
 		</plugins>
 	</build>
 
