--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:h2:mem:testdb
 logging.level.guru.springframework=debug
+spring.datasource.sql-script-encoding=UTF-8
 
 upload.path=C:/Users/nicol/Desktop/Lessons/Java/dpo/uploads
