--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,16 @@
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:h2:mem:testdb
-logging.level.guru.springframework=debug
+#spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:h2:mem:testdb
+#logging.level.guru.springframework=debug
+#spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=jdbc:mysql://localhost:3306/dpo
+spring.datasource.username=root
+spring.datasource.password=
+spring.jpa.generate-ddl=true
 spring.datasource.sql-script-encoding=UTF-8
 
-upload.path=C:/Users/nicol/Desktop/Lessons/Java/dpo/uploads
+amazon.s3.bucket-name=dpobucket
+amazon.s3.endpoint=https://dpobucket.s3-eu-north-1.amazonaws.com/
+amazon.s3.access-key=AKIAVYL4KY3SBJNMQU5V 
+amazon.s3.secret-key=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
+
+upload.path=/src/main/resources/static/resources/image/uploads
