--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,17 @@
 #spring.jpa.hibernate.ddl-auto=update
 #spring.datasource.url=jdbc:h2:mem:testdb
-#logging.level.guru.springframework=debug
+logging.level.guru.springframework=debug
 #spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url=jdbc:mysql://localhost:3306/dpo
-spring.datasource.username=root
-spring.datasource.password=
-spring.jpa.generate-ddl=true
+#spring.datasource.initialization-mode=always
+spring.jpa.generate-ddl=false
+spring.jpa.hibernate.ddl-auto=none
+spring.datasource.url=jdbc:mysql://eu-cdbr-west-03.cleardb.net/heroku_c8173553bfdd67a?reconnect=true
+spring.datasource.username=be85db6b2330ab
+spring.datasource.password=ab5b94dc
 spring.datasource.sql-script-encoding=UTF-8
-
+#spring.jpa.properties.javax.persistence.schema-generation.create-source=metadata
+#spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
+#spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=database_create.sql
 amazon.s3.bucket-name=dpobucket
 amazon.s3.endpoint=https://dpobucket.s3-eu-north-1.amazonaws.com/
 amazon.s3.access-key=AKIAVYL4KY3SBJNMQU5V 
