--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@
 logging.level.guru.springframework=debug
 #spring.jpa.hibernate.ddl-auto=create
 #spring.datasource.initialization-mode=always
+spring.datasource.hikari.max-lifetime=600000
 spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://eu-cdbr-west-03.cleardb.net/heroku_c8173553bfdd67a?reconnect=true
