--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,9 +6,12 @@ logging.level.guru.springframework=debug
 spring.datasource.hikari.max-lifetime=600000
 spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://eu-cdbr-west-03.cleardb.net/heroku_c8173553bfdd67a?reconnect=true
-spring.datasource.username=be85db6b2330ab
-spring.datasource.password=ab5b94dc
+
+
+spring.datasource.url=${JDBC_DATABASE_URL}
+spring.datasource.username=${JDBC_DATABASE_USERNAME}
+spring.datasource.password=${JDBC_DATABASE_PASSWORD}
+
 spring.datasource.sql-script-encoding=UTF-8
 #spring.jpa.properties.javax.persistence.schema-generation.create-source=metadata
 #spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
