--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,8 @@ spring.datasource.sql-script-encoding=UTF-8
 #spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=database_create.sql
 amazon.s3.bucket-name=dpobucket
 amazon.s3.endpoint=https://dpobucket.s3-eu-north-1.amazonaws.com/
-amazon.s3.access-key=AKIAVYL4KY3SBJNMQU5V 
-amazon.s3.secret-key=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
+amazon.s3.access-key=${ACCESS_KEY}
+amazon.s3.secret-key=${SECRET_KEY}
+
 
 upload.path=/src/main/resources/static/resources/image/uploads
