--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,4 +22,5 @@ amazon.s3.access-key=${ACCESS_KEY}
 amazon.s3.secret-key=${SECRET_KEY}
 
 
+qweqweqw
 upload.path=/src/main/resources/static/resources/image/uploads
