--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=none
 
 
-spring.datasource.url=${JDBC_DATABASE_URL}
+spring.datasource.url=jdbc:mysql://eu-cdbr-west-03.cleardb.net/heroku_c8173553bfdd67a?useUnicode=yes&characterEncoding=UTF-8 
 spring.datasource.username=${JDBC_DATABASE_USERNAME}
 spring.datasource.password=${JDBC_DATABASE_PASSWORD}
 
@@ -20,6 +20,7 @@ amazon.s3.bucket-name=dpobucket
 amazon.s3.endpoint=https://dpobucket.s3-eu-north-1.amazonaws.com/
 amazon.s3.access-key=${ACCESS_KEY}
 amazon.s3.secret-key=${SECRET_KEY}
+
 
 
 upload.path=/src/main/resources/static/resources/image/uploads
