--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,9 @@
 logging.level.guru.springframework=debug
 #spring.jpa.hibernate.ddl-auto=create
 #spring.datasource.initialization-mode=always
+spring.jpa.properties.hibernate.connection.characterEncoding=utf-8  
+spring.jpa.properties.hibernate.connection.CharSet=utf-8  
+spring.jpa.properties.hibernate.connection.useUnicode=true
 spring.datasource.hikari.max-lifetime=600000
 spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=none
