--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=none
 
 
-spring.datasource.url=jdbc:mysql://eu-cdbr-west-03.cleardb.net/heroku_c8173553bfdd67a?useUnicode=yes&characterEncoding=UTF-8 
+spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${JDBC_DATABASE_USERNAME}
 spring.datasource.password=${JDBC_DATABASE_PASSWORD}
 
